--- a/examples/colors.html
+++ b/examples/colors.html
@@ -291,7 +291,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             let color = col as u8;
             let shade = row as u8;
             let theme_color = Color::Theme(color, shade);
-            let text = format!("({}, {})", col, row);
+            let text = format!("({col}, {row})");
 
             let mut font_color = Color::White;
             if col == 0 {
